--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -1,6 +1,6 @@
 /* Importar fuentes de Google */
 
-@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap');
 
 /* Primary Colors */
 $white: #ffffff;
@@ -12,5 +12,6 @@ $very-dark-gray: #696969;
 $font-size: 15px;
 
 /* Fuentes Google */
-$font-alata: "Alata", sans-serif;
-$font-josefin: "Josefin Sans", sans-serif;
+$font-alata: 'Alata', sans-serif;
+$font-josefin: 'Josefin Sans', sans-serif;
+
